--- a/notebooks/eods-week02-python_and_numpy.ipynb
+++ b/notebooks/eods-week02-python_and_numpy.ipynb
@@ -384,6 +384,89 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "4\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "6\n",
+      "1\n",
+      "2\n",
+      "1\n",
+      "3\n",
+      "2\n",
+      "4\n",
+      "3\n",
+      "5\n",
+      "4\n",
+      "6\n",
+      "5\n",
+      "7\n",
+      "2\n",
+      "3\n",
+      "1\n",
+      "4\n",
+      "2\n",
+      "5\n",
+      "3\n",
+      "6\n",
+      "4\n",
+      "7\n",
+      "5\n",
+      "8\n",
+      "3\n",
+      "4\n",
+      "1\n",
+      "5\n",
+      "2\n",
+      "6\n",
+      "3\n",
+      "7\n",
+      "4\n",
+      "8\n",
+      "5\n",
+      "9\n",
+      "4\n",
+      "5\n",
+      "1\n",
+      "6\n",
+      "2\n",
+      "7\n",
+      "3\n",
+      "8\n",
+      "4\n",
+      "9\n",
+      "5\n",
+      "10\n",
+      "5\n",
+      "done looping\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in [1, 2, 3, 4, 5]:\n",
+    "    print(i)                    # first line in \"for i\" block\n",
+    "    for j in [1, 2, 3, 4, 5]:\n",
+    "        print(j)                # first line in \"for j\" block\n",
+    "        print(i + j)            # last line in \"for j\" block\n",
+    "    print(i)                    # last line in \"for i\" block\n",
+    "print(\"done looping\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -396,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -409,7 +492,7 @@
        "4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -445,7 +528,8 @@
     }
    ],
    "source": [
-    "help(add_two)"
+    "help(add_two)\n",
+    "add_two??"
    ]
   },
   {
@@ -487,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -500,7 +584,7 @@
        "3"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -571,10 +655,10 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +667,7 @@
     "def subtract(x,y):\n",
     "    return x-y\n",
     "\n",
-    "subtract(3,1)"
+    "subtract(4,1)"
    ]
   },
   {
@@ -600,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -613,7 +697,7 @@
        "0.67"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +706,7 @@
     "def proportion(numer,denom,precision=2):\n",
     "    return round(numer/denom,precision)\n",
     "\n",
-    "proportion(2,precision=2,denom=3)"
+    "proportion(2,3)"
    ]
   },
   {
@@ -638,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -651,7 +735,7 @@
        "'the value of x is 3.1415'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -674,21 +758,21 @@
     {
      "data": {
       "text/plain": [
-       "'the value of x is 3.14'"
+       "'the value of x is 3.1'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'the value of x is %0.2f' % x"
+    "'the value of x is %0.1f' % x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -701,7 +785,7 @@
        "'the value of x is 3.14'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -722,16 +806,16 @@
     {
      "data": {
       "text/plain": [
-       "'the value of x is 3.14'"
+       "'the value of x is 1.85850'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f'the value of x is {x:0.2f}'"
+    "f'the value of x is {(5-x):0.5f}'\n"
    ]
   },
   {
@@ -747,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -760,7 +844,7 @@
        "'3.14'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -843,13 +927,13 @@
      "output_type": "stream",
      "text": [
       "This is a multiline string.\n",
-      "The value of x is 3.1415.\n"
+      "The value of x is 3.1415\n"
      ]
     }
    ],
    "source": [
     "print(\"\"\"This is a multiline string.\n",
-    "The value of x is {}.\"\"\".format(x))"
+    "The value of x is {}\"\"\".format(x))"
    ]
   },
   {
@@ -937,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -950,7 +1034,7 @@
        "[42, 'e', 2.0]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -997,21 +1081,21 @@
     {
      "data": {
       "text/plain": [
-       "2.0"
+       "'e'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x[-1] # reverse indexing"
+    "x[-2] # reverse indexing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1024,7 +1108,7 @@
        "[4, 'e', 2.0]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1049,7 +1133,7 @@
        "[4, 'e', 2.0, 'a']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1071,17 +1155,18 @@
     {
      "data": {
       "text/plain": [
-       "[4, 2.0, 'a']"
+       "list"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "value_at_1 = x.pop(1) # remove/delete at index\n",
-    "x"
+    "x\n",
+    "type(x)"
    ]
   },
   {
@@ -1104,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 63,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1114,23 +1199,23 @@
     {
      "data": {
       "text/plain": [
-       "{'b': 2, 'a': 1, 'c': 4}"
+       "{3.14: 'Pi', 'a': 1, 'c': [1, 5]}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = {'b':2,'a':1,'c':4} \n",
+    "x = {3.14:\"Pi\",'a':1,'c':[1,5]} \n",
     "# or x = dict(b=2,a=1,c=4)\n",
     "x # NOTE: order is not guaranteed!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 64,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1140,22 +1225,22 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "'Pi'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# index into dictionary using key\n",
-    "x['b'] "
+    "x[3.14] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 65,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1165,10 +1250,10 @@
     {
      "data": {
       "text/plain": [
-       "{'b': 2, 'a': 1, 'c': 4, 'd': 3}"
+       "{3.14: 'Pi', 'a': 1, 'c': [1, 5], 'd': 3}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1469,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 71,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1482,7 +1567,7 @@
        "{2, 'e'}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1494,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 72,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1507,7 +1592,7 @@
        "{1, 2, 'e'}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 73,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1532,7 +1617,7 @@
        "{1, 2}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1544,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 74,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1557,7 +1642,7 @@
        "{2}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1568,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 76,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1581,7 +1666,7 @@
        "{1}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2311,7 +2396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 77,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2324,7 +2409,7 @@
        "[0, 1, 2]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2349,24 +2434,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 0\n",
     "while x < 3:\n",
@@ -2689,17 +2763,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 79,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-79-b179236f1b12>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msorted\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "x = [4,1,2,3]\n",
     "y = sorted(x)\n",
-    "assert x == [4,1,2,3]\n",
+    "assert y == [4,1,2,3]\n",
     "assert y == [1,2,3,4]"
    ]
   },
@@ -2751,13 +2837,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 81,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# for example, to sort a dictionary by value\n",
     "d = {'a':3,'b':5,'c':1}\n",
@@ -2765,7 +2862,9 @@
     "# recall that .items() returns a set of key,value tuples\n",
     "s = sorted(d.items(), key=lambda x: x[1])\n",
     "\n",
-    "assert s == [('c', 1), ('a', 3), ('b', 5)]"
+    "assert s == [('c', 1), ('a', 3), ('b', 5)]\n",
+    "\n",
+    "sorted(d.values())"
    ]
   },
   {
@@ -3238,7 +3337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 83,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -3278,7 +3377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 84,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -3291,7 +3390,7 @@
        "Counter({'red': 2, 'blue': 3, 'green': 1})"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3303,17 +3402,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 87,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'red': 2, 'blue': 3, 'green': 1})"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c = Counter()\n",
     "for word in ['red', 'blue', 'red', 'green', 'blue', 'blue']:\n",
-    "    c[word] += 1"
+    "    c[word] += 1\n",
+    "c"
    ]
   },
   {
@@ -3490,7 +3601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 88,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -3790,7 +3901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 89,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -3800,10 +3911,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 6, 7, 6, 7])"
+       "array([4, 6, 4, 5, 9])"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3873,7 +3984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 90,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -3886,7 +3997,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4100,7 +4211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 91,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -4113,7 +4224,7 @@
        "array([0, 1, 2, 3, 4])"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4175,7 +4286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 92,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -4188,7 +4299,7 @@
        "array([2, 3, 4])"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4200,7 +4311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 93,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -4213,7 +4324,7 @@
        "array([3, 4])"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4260,7 +4371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 105,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -4273,7 +4384,7 @@
        "array([1, 3])"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
